About Us style is ended

--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -7,6 +7,7 @@
     <title>KARALAR ARCH - About us</title>
     <link rel="stylesheet" href="../css/pages.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="aboutUs">
