--- a/pages/projects.html
+++ b/pages/projects.html
@@ -5,15 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KARALAR ARCH - Projects</title>
+    <link rel="stylesheet" href="../css/pages.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="allProjects">
         <nav>
-            <img src="images/logo.jpeg" alt="companyLogo">
+            <img src="../images/logo.png" alt="companyLogo">
             <ul>
-                <li><a href="index.html" target="_blank">Home</a></li>
-                <li><a href="pages/aboutUs.html" target="_blank">About Us</a></li>
-                <li><a href="pages/projects.html" target="_blank">Projects</a></li>
+                <li><a href="../index.html" target="_blank">Home</a></li>
+                <li><a href="aboutUs.html" target="_blank">About Us</a></li>
+                <li><a href="projects.html" target="_blank">Projects</a></li>
                 <li><a href="contactUs.html" target="_blank">Contact Us</a></li>  
             </ul>
         </nav>
