Contact us style is ended

--- a/pages/contactUs.html
+++ b/pages/contactUs.html
@@ -5,25 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KARALAR ARCH - Contact Us</title>
+    <link rel="stylesheet" href="../css/pages.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="allContact">
         <nav>
-            <img src="../images/logo.jpeg" alt="companyLogo">
+            <img src="../images/logo.png" alt="companyLogo">
             <ul>
-                <li><a href="index.html" target="_blank">Home</a></li>
-                <li><a href="pages/aboutUs.html" target="_blank">About Us</a></li>
-                <li><a href="pages/projects.html" target="_blank">Projects</a></li>
-                <li><a href="pages/contactUs.html" target="_blank">Contact Us</a></li>  
+                <li><a href="../index.html" target="_blank">Home</a></li>
+                <li><a href="aboutUs.html" target="_blank">About Us</a></li>
+                <li><a href="projects.html" target="_blank">Projects</a></li>
+                <li><a href="contactUs.html" target="_blank">Contact Us</a></li>  
             </ul>
         </nav>
         <div class="form">
+            <h2>Contact Us!</h2>
             <label for="name">Name</label>
             <input type="text" id="name">
             <label for="surname">Surname</label>
             <input type="text" id="surname">
             <label for="email">E-mail</label>
             <input type="email" id="email">
+            <label for="textarea">Message</label>
             <textarea name="message" rows="10" cols="30">
                 Your message...
             </textarea>
